--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+body {
+  background-image: url(../images/fone.jpg);
+}
+body h1 {
+  color: darkgreen;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+}
+
+.container {
+  margin-left: 370px;
+}
+
 #cities .element .header {
   border: 1px solid rgb(163, 160, 160);
   display: flex;
