--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,15 @@ body h1 {
   text-align: center;
 }
 
-.container {
-  margin-left: 370px;
+#citySearch {
+  margin-left: 350px;
 }
 
+#cities {
+  width: 270px;
+  margin-top: 30px;
+  margin-left: 350px;
+}
 #cities .element .header {
   border: 1px solid rgb(163, 160, 160);
   display: flex;
