--- a/css/style.scss
+++ b/css/style.scss
@@ -6,14 +6,18 @@ body{
         text-align: center;
     }
 }
-.container{
-    margin-left: 370px;
+#citySearch{
+    margin-left: 350px;
+    
 }
-#cities {
-     
+#cities {   
+      width: 270px;
+      margin-top: 30px;
+      margin-left: 350px;
     .element {
        
         .header {
+            
             border: 1px solid rgb(163, 160, 160);
             display: flex;
             justify-content: space-between;
